--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+# Laravel
 /bootstrap/compiled.php
 /vendor
+
+# Composer
 composer.phar
 composer.lock
+
+# OS
 .DS_Store
 Thumbs.db
+.idea
+
+# Environment config
+/app/config/local
+/app/config/staging
+/app/config/production
